trunk/tests/kiama/negative/type_errors/L1/4_nonintconstant1.ob
MODULE nonintconstant;

CONST
    aconst2 = TRUE;

END nonintconstant.
